# legalease

./: .dockerignore  .env-example.txt  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
app/: __init__.py  config.py  logging_config.py  main.py
app/routers/: documents.py
app/services/: __init__.py  ingestion.py  rag.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: AnalysisResult.tsx  UploadForm.tsx
