[project]
name = "legalease-ai"
version = "0.1.0"
description = "LegalEase AI – Smart contract/document analyzer with FastAPI, LangChain, and vector search."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=0.3.0",
    "sentence-transformers>=2.7.0",
    "pinecone-client>=5.0.0",
    "pypdf>=5.0.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
legalease-api = "app.main:app"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
ignore_missing_imports = true
